2008-02-10  Dalibor Topic  <robilad@kaffe.org>

	* m4/acinclude.m4 (CLASSPATH_CHECK_JAVAH)[USER_JAVAH]: 
	Check for gjavah-4.3.

2008-02-10  Mark Wielaard  <mark@klomp.org>

	* scripts/check_jni_methods.sh.in:
	Use abs_src_builddir so that the absolute path
	to the source directory is used by the script.
	
2008-02-10  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* scripts/check_jni_methods.sh.in:
	Use abs_top_builddir so that the absolute path
	to the build directory is used by the script.
	
2008-02-10  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/remote/rmi/RMIConnection.java:
	(addNotificationListeners(ObjectName[],
	MarshalledObject[], Subject[])): Fixed return type.
	(close()): Added.
	(createMBean(String,ObjectName,MarshalledObject,
	String[], Subject)): Likewise.
	(createMBean(String,ObjectName,ObjectName,
	MarshalledObject, String[], Subject)): Likewise.
	(createMBean(String,ObjectName,ObjectName,
	Subject)): Likewise.
	(createMBean(String,ObjectName,Subject)): Likewise.
	(getAttribute(ObjectName,String,Subject)): Likewise.
	(getAttributes(ObjectName,String[],Subject)): Likewise.
	(getConnectionId()): Likewise.
	(getDefaultDomain(Subject)): Likewise.
	(getDomains(Subject)): Likewise.
	(getMBeanCount(Subject)): Likewise.
	(getMBeanInfo(ObjectName,Subject)): Likewise.
	(getObjectInstance(ObjectName,Subject)): Likewise.
	(invoke(ObjectName,String,MarshalledObject,String[],
	Subject)): Likewise.
	(isInstanceOf(ObjectName,String,Subject)): Likewise.
	(isRegistered(ObjectName,Subject)): Likewise.
	(queryMBeans(ObjectName,MarshalledObject,Subject)): Likewise.
	(queryNames(ObjectName,MarshalledObject,Subject)): Likewise.
	(removeNotificationListener(ObjectName,ObjectName,MarshalledObject,
	MarshalledObject,Subject)): Likewise.
	(removeNotificationListener(ObjectName,ObjectName,Subject)):
	Likewise.
	(removeNotificationListeners(ObjectName,Integer[],Subject)):
	Likewise.
	(setAttribute(ObjectName,MarshalledObject,Subject)): Likewise.