@@ -1,5 +1,13 @@
 2008-02-10  Dalibor Topic  <robilad@kaffe.org>
 
+	* lib/Makefile.am (compile_classpath), include/Makefile.am (JAVAH): 
+	Replaced USER_CLASSLIB with PATH_TO_GLIBJ_ZIP.
+
+	* m4/acinclude.m4 (CLASSPATH_WITH_CLASSLIB)[--with-classpath]:
+	Removed unused option. It's superceded by --with-glibj-zip.
+
+2008-02-10  Dalibor Topic  <robilad@kaffe.org>
+
 	* m4/acinclude.m4 (CLASSPATH_CHECK_JAVAH)[USER_JAVAH]: 
 	Check for gjavah-4.3.
 
